# maestronexus

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: health.py  v1.py
backend/app/core/: audit.py  config.py  database.py  deps.py  errors.py  redis.py  schemas.py  security.py  storage.py
backend/app/modules/: __init__.py
backend/app/modules/adaptive/: models.py  router.py  schemas.py  service.py
backend/app/modules/ai/: client.py  council.py  models.py  providers.py  router.py  schemas.py  service.py
backend/app/modules/analytics/: router.py  schemas.py  service.py
backend/app/modules/attendance/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/blueprint/: __init__.py  models.py  promotion.py  router.py  schemas.py  service.py
backend/app/modules/content/: models.py  router.py  schemas.py  service.py
backend/app/modules/iam/: models.py  (+4 more)
backend/migrations/: env.py
backend/migrations/versions/: 90083b9bbe3f_initial_schema_full_data_model.py  a1b2c3d4e5f6_stages_and_ai_settings.py  c3d4e5f6a7b8_clo_course_link.py  d4e5f6a7b8c9_blueprint_domain.py
backend/tests/: ai_settings_test.py  ai_test.py  analytics_test.py  attendance_test.py  blueprint_runtime_test.py  blueprint_test.py  conftest.py  content_test.py  courses_test.py  iam_admin_test.py  openrouter_test.py  projects_test.py  stages_test.py
backend/tests/enrollment_adaptive/: adaptive_test.py  conftest.py  enrollment_test.py
(+152 files in other folders)
